--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "massive": "^2.5.0"
   }
 }
